# rag

ademirneto/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
ademirneto/docs/: proposta_tecnica.tex  proposta_tecnica_pipeline_intercambio.md
ademirneto/src/chunking/: rule_chunker.py
ademirneto/src/embedding/: qdrant_indexer.py
ademirneto/src/extraction/: llm_extractor.py
ademirneto/src/ingestion/: pdf_loader.py
ademirneto/src/validation/: rate_validator.py
