[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rag-intercambio"
version = "0.1.0"
description = "Pipeline RAG para extração de taxas de intercâmbio Visa & Mastercard"
authors = [{ name = "Ademir Batista dos Santos Neto", email = "ademir.batista@beanalytic.com.br" }]
requires-python = ">=3.11"
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
